[gd_scene load_steps=3 format=3 uid="uid://cs12ddg1t3lhy"]

[ext_resource type="FontFile" uid="uid://bhm3ojrhorb34" path="res://TT Octosquares Trial Regular.ttf" id="1_qg0ea"]
[ext_resource type="Script" path="res://interfaz.gd" id="1_shtfq"]

[node name="Interfaz" type="CanvasLayer"]
script = ExtResource("1_shtfq")

[node name="Score" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -58.0
offset_right = 58.0
offset_bottom = 159.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_qg0ea")
theme_override_font_sizes/font_size = 60
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Mensaje" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -182.0
offset_top = -92.5
offset_right = 182.0
offset_bottom = 92.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_qg0ea")
theme_override_font_sizes/font_size = 60
text = "00_esquiva_cosas"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BotPlay" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -75.0
offset_top = -210.0
offset_right = 75.0
offset_bottom = -135.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("1_qg0ea")
text = "PLAY!"

[node name="MensajeTimer" type="Timer" parent="."]

[connection signal="pressed" from="BotPlay" to="." method="_on_bot_play_pressed"]
[connection signal="timeout" from="MensajeTimer" to="." method="_on_mensaje_timer_timeout"]
